VS8: Only copy dlls when they need to be.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7249 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/vc8_0/7ZipBuilder.vcproj
+++ b/vc8_0/7ZipBuilder.vcproj
@@ -28,7 +28,7 @@
 			<Tool
 				Name="VCCustomBuildTool"
 				Description="Copying 7zxr dll..."
-				CommandLine="xcopy &quot;$(SolutionDir)..\plugins\$(ProjectName)\7zxr.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;"
+				CommandLine="if not exist &quot;$(OutDir)7zxr.dll&quot; (&#x0D;&#x0A;	xcopy &quot;$(SolutionDir)..\plugins\$(ProjectName)\7zxr.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)"
 				Outputs="$(OutDir)7zxr.dll"
 				ExecutionBucket="1"
 			/>
@@ -125,7 +125,7 @@
 			<Tool
 				Name="VCCustomBuildTool"
 				Description="Copying 7zxr dll..."
-				CommandLine="xcopy &quot;$(SolutionDir)..\plugins\$(ProjectName)\7zxr.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;"
+				CommandLine="if not exist &quot;$(OutDir)7zxr.dll&quot; (&#x0D;&#x0A;	xcopy &quot;$(SolutionDir)..\plugins\$(ProjectName)\7zxr.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)"
 				Outputs="$(OutDir)7zxr.dll"
 				ExecutionBucket="1"
 			/>
@@ -220,7 +220,7 @@
 			<Tool
 				Name="VCCustomBuildTool"
 				Description="Copying 7zxr dll..."
-				CommandLine="xcopy &quot;$(SolutionDir)..\plugins\$(ProjectName)\7zxr.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;"
+				CommandLine="if not exist &quot;$(OutDir)7zxr.dll&quot; (&#x0D;&#x0A;	xcopy &quot;$(SolutionDir)..\plugins\$(ProjectName)\7zxr.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)"
 				Outputs="$(OutDir)7zxr.dll"
 				ExecutionBucket="1"
 			/>
@@ -313,7 +313,7 @@
 			<Tool
 				Name="VCCustomBuildTool"
 				Description="Copying 7zxr dll..."
-				CommandLine="xcopy &quot;$(SolutionDir)..\plugins\$(ProjectName)\7zxr.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;"
+				CommandLine="if not exist &quot;$(OutDir)7zxr.dll&quot; (&#x0D;&#x0A;	xcopy &quot;$(SolutionDir)..\plugins\$(ProjectName)\7zxr.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)"
 				Outputs="$(OutDir)7zxr.dll"
 				ExecutionBucket="1"
 			/>
