--- a/vc8_0/SkinScanSKS.vcproj
+++ b/vc8_0/SkinScanSKS.vcproj
@@ -28,7 +28,7 @@
 			<Tool
 				Name="VCCustomBuildTool"
 				Description="Copying zlibwapi dll..."
-				CommandLine="xcopy &quot;$(SolutionDir)$(ConfigurationName)$(PlatformName)\zlibwapi.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;"
+				CommandLine="if not exist &quot;$(OutDir)zlibwapi.dll&quot; (&#x0D;&#x0A;	xcopy &quot;$(SolutionDir)$(ConfigurationName)$(PlatformName)\zlibwapi.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)"
 				Outputs="$(OutDir)zlibwapi.dll"
 				ExecutionBucket="1"
 			/>
@@ -121,7 +121,7 @@
 			<Tool
 				Name="VCCustomBuildTool"
 				Description="Copying zlibwapi dll..."
-				CommandLine="xcopy &quot;$(SolutionDir)$(ConfigurationName)$(PlatformName)\zlibwapi.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;"
+				CommandLine="if not exist &quot;$(OutDir)zlibwapi.dll&quot; (&#x0D;&#x0A;	xcopy &quot;$(SolutionDir)$(ConfigurationName)$(PlatformName)\zlibwapi.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)"
 				Outputs="$(OutDir)zlibwapi.dll"
 				ExecutionBucket="1"
 			/>
@@ -215,7 +215,7 @@
 			<Tool
 				Name="VCCustomBuildTool"
 				Description="Copying zlibwapi dll..."
-				CommandLine="xcopy &quot;$(SolutionDir)$(ConfigurationName)$(PlatformName)\zlibwapi.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;"
+				CommandLine="if not exist &quot;$(OutDir)zlibwapi.dll&quot; (&#x0D;&#x0A;	xcopy &quot;$(SolutionDir)$(ConfigurationName)$(PlatformName)\zlibwapi.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)"
 				Outputs="$(OutDir)zlibwapi.dll"
 				ExecutionBucket="1"
 			/>
@@ -307,7 +307,7 @@
 			<Tool
 				Name="VCCustomBuildTool"
 				Description="Copying zlibwapi dll..."
-				CommandLine="xcopy &quot;$(SolutionDir)$(ConfigurationName)$(PlatformName)\zlibwapi.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;"
+				CommandLine="if not exist &quot;$(OutDir)zlibwapi.dll&quot; (&#x0D;&#x0A;	xcopy &quot;$(SolutionDir)$(ConfigurationName)$(PlatformName)\zlibwapi.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)"
 				Outputs="$(OutDir)zlibwapi.dll"
 				ExecutionBucket="1"
 			/>
