SkinEngine: Added Plus/Minus Icon Hoverstates
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7284 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -126,6 +126,8 @@ IDR_USERSFRAME          ICON                    "Res\\users.ico"
 IDR_CHANSFRAME          ICON                    "Res\\channel.ico"
 IDI_PLUS                ICON                    "Res\\Plus.ico"
 IDI_MINUS               ICON                    "Res\\Minus.ico"
+IDI_PLUS_HOVER          ICON                    "Res\\PlusHover.ico"
+IDI_MINUS_HOVER         ICON                    "Res\\MinusHover.ico"
 IDI_TICK                ICON                    "Res\\Tick.ico"
 IDI_BUSY                ICON                    "Res\\Busy.ico"
 IDI_UNSTABLE            ICON                    "Res\\Unstable.ico"
