Fixed broken download previews
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7330 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza_9.vcproj
+++ b/shareaza/Shareaza_9.vcproj
@@ -1006,6 +1006,10 @@
 				>
 			</File>
 			<File
+				RelativePath="ShareazaThread.cpp"
+				>
+			</File>
+			<File
 				RelativePath="ShareazaURL.cpp"
 				>
 			</File>
@@ -3380,6 +3384,10 @@
 			</File>
 			<File
 				RelativePath="ShareazaOM.h"
+				>
+			</File>
+			<File
+				RelativePath="ShareazaThread.h"
 				>
 			</File>
 			<File
