Updated VC7/VC8 Projects
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7333 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/vc8_0/Shareaza.vcproj
+++ b/vc8_0/Shareaza.vcproj
@@ -1014,6 +1014,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\shareaza\ShareazaThread.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\shareaza\ShareazaURL.cpp"
 				>
 			</File>
@@ -2677,6 +2681,10 @@
 			</File>
 			<File
 				RelativePath="..\shareaza\ShareazaFile.h"
+				>
+			</File>
+			<File
+				RelativePath="..\shareaza\ShareazaThread.h"
 				>
 			</File>
 			<File
