--- a/vc7_1/Shareaza.vcproj
+++ b/vc7_1/Shareaza.vcproj
@@ -798,6 +798,12 @@
 				RelativePath="..\shareaza\ShareazaDataSource.cpp">
 			</File>
 			<File
+				RelativePath="..\shareaza\ShareazaFile.cpp">
+			</File>
+			<File
+				RelativePath="..\shareaza\ShareazaThread.cpp">
+			</File>
+			<File
 				RelativePath="..\shareaza\ShareazaURL.cpp">
 			</File>
 			<File
@@ -2603,6 +2609,9 @@
 				RelativePath="..\shareaza\ShareazaFile.h">
 			</File>
 			<File
+				RelativePath="..\shareaza\ShareazaThread.h">
+			</File>
+			<File
 				RelativePath="..\shareaza\ShareazaURL.h">
 			</File>
 			<File
@@ -3565,6 +3574,9 @@
 				RelativePath="..\shareaza\Res\Copy.cur">
 			</File>
 			<File
+				RelativePath="..\shareaza\Res\CopyVista.cur">
+			</File>
+			<File
 				RelativePath="..\shareaza\Res\Default.xml">
 				<FileConfiguration
 					Name="DebugWin32|Win32">
@@ -3734,7 +3746,16 @@
 				RelativePath="..\shareaza\res\MenuBar.bmp">
 			</File>
 			<File
+				RelativePath="..\shareaza\Res\Minus.ico">
+			</File>
+			<File
+				RelativePath="..\shareaza\Res\MinusHover.ico">
+			</File>
+			<File
 				RelativePath="..\shareaza\Res\Move.cur">
+			</File>
+			<File
+				RelativePath="..\shareaza\Res\MoveVista.cur">
 			</File>
 			<File
 				RelativePath="..\shareaza\Res\MusicBrainz.bmp">
@@ -3762,6 +3783,12 @@
 			</File>
 			<File
 				RelativePath="..\shareaza\Res\PanelMark.bmp">
+			</File>
+			<File
+				RelativePath="..\shareaza\Res\Plus.ico">
+			</File>
+			<File
+				RelativePath="..\shareaza\Res\PlusHover.ico">
 			</File>
 			<File
 				RelativePath="..\shareaza\Res\PointerArrow.ico">
