Fixed vc9 Mediaplayer Crash in Vista
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7347 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza_9.vcproj
+++ b/shareaza/Shareaza_9.vcproj
@@ -83,6 +83,7 @@
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="true"
 				SubSystem="2"
+				DataExecutionPrevention="0"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -173,6 +174,7 @@
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="true"
 				SubSystem="2"
+				DataExecutionPrevention="0"
 				TargetMachine="17"
 				KeyFile=""
 			/>
@@ -269,6 +271,7 @@
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				SetChecksum="true"
+				DataExecutionPrevention="0"
 				TargetMachine="1"
 				KeyFile=""
 			/>
@@ -363,6 +366,7 @@
 				GenerateManifest="false"
 				IgnoreDefaultLibraryNames=""
 				SubSystem="2"
+				DataExecutionPrevention="0"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				SetChecksum="true"
